--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ log = "0.4"
 clap = { version = "4.0", features = ["derive"] }
 config = "0.13"
 pretty_env_logger = "0.4"
-nix = "0.25.0"
+nix = "0.26.2"
 glob = "0.3.0"
 serde = "1.0"
 serde_json = "1.0"
+thiserror = "1.0.38"
