--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ anyhow = "1"
 log = "0.4"
 clap = { version = "4.0", features = ["derive"] }
 config = "0.13"
-pretty_env_logger = "0.4"
+pretty_env_logger = "0.5.0"
 nix = "0.26.2"
 glob = "0.3.0"
 serde_json = "1.0"
 thiserror = "1.0.38"
 serde = { version = "1.0.162", features = ["derive"] }
+systemctl = "0.1.9"
