--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,11 @@ jobs:
   fmt:
     name: Cargo fmt
     runs-on: ubuntu-latest
-    container: fedora:latest
     steps:
-      - name: Install deps
-        run: |
-          dnf install -y cargo rustfmt
       - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -93,27 +92,3 @@ jobs:
           command: test
           args: -- --test-threads=1
       
-
-  # manpages:
-  #   name: Test man page generation
-  #   runs-on: ubuntu-latest
-  #   container: fedora:latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: install deps
-  #       run: |
-  #         dnf install -y make python3-docutils
-  #     - name: generate man pages
-  #       run: make man
-
-  # devcontainer_test:
-  #   name: Test Devcontainer Creation
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Install devcontainer CLI
-  #       run: npm install -g @vscode/dev-container-cli
-  #     - name: Build devcontainer
-  #       run: devcontainer build --image-name greenboot-rs .
-  #     - name: Test building in devcontainer
-  #       run: docker run --rm -v `pwd`:/code:z --workdir /code --user root greenboot-rs cargo build --verbose
