--- a/.packit.yaml
+++ b/.packit.yaml
@@ -57,7 +57,7 @@ jobs:
 - job: copr_build
   trigger: commit
   branch: main
-  owner: "runcom" # copr repo namespace
+  owner: "saypaul" # copr repo namespace
   project: greenboot  # copr repo name so you can consume the builds
   targets:
   - centos-stream-9-aarch64
