support for read only /boot mount
Support is added for greenboot to work with read-only /boot.
It uses PrivateMounts=yes to isolate the system and remounts
boot as rw followed by setting the grub parameters as per healthcheck.

The following services are affected:

greenboot-grub2-set-success.service
greenboot-grub2-set-counter.service
greenboot-rpm-ostree-check-fallback.service

The grub2-editenv command is decoupled from greenboot-grub2-set-success.service
and is part of a separate script.

Signed-off-by: saypaul <paul.sayan@gmail.com>

--- a/usr/lib/systemd/system/greenboot-grub2-set-counter.service
+++ b/usr/lib/systemd/system/greenboot-grub2-set-counter.service
@@ -18,6 +18,7 @@ RequiresMountsFor=/boot
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/libexec/greenboot/greenboot-grub2-set-counter
+PrivateMounts=yes
 
 [Install]
 RequiredBy=ostree-finalize-staged.service
