--- a/usr/lib/systemd/system/greenboot-rpm-ostree-grub2-check-fallback.service
+++ b/usr/lib/systemd/system/greenboot-rpm-ostree-grub2-check-fallback.service
@@ -16,6 +16,7 @@ Before=greenboot-grub2-set-success.service
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/libexec/greenboot/greenboot-rpm-ostree-grub2-check-fallback
+PrivateMounts=yes
 
 [Install]
 RequiredBy=greenboot-healthcheck.service
